--- a/05-3columnas_css_grid/css/styles.css
+++ b/05-3columnas_css_grid/css/styles.css
@@ -49,3 +49,18 @@ p {
 
 
 /** CODIGO AQUI **/
+@media (min-width: 768px){
+  .contenedor-grip{
+    display: grid;
+    grid-template-areas: "izquierda contenido derecha";
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-auto-flow: column;
+    column-gap: 2rem;
+  }
+  .contenido-principal{
+    grid-area: contenido;
+  }
+  .sidebar-1{
+    grid-area: izquierda;
+  }
+}
